--- a/UniFiler10/Views/FolderView.xaml
+++ b/UniFiler10/Views/FolderView.xaml
@@ -19,16 +19,16 @@
 		Background="#FFDEEADE">
 
 		<Popup IsOpen="{x:Bind VM.IsCameraOverlayOpen, Mode=OneWay, FallbackValue=False}">
-			<local:CameraView x:Name="CameraView"
-				DataContext="{Binding ElementName=me, Path='', Mode=OneWay}"/>
+			<local:CameraView x:Name="CameraView"/>
+			<!--DataContext="{x:Bind Path=VM.Folder, Mode=OneWay}"/>-->
 		</Popup>
 
 		<Popup IsOpen="{x:Bind VM.IsAudioRecorderOverlayOpen, Mode=OneWay, FallbackValue=False}">
-			<local:AudioRecorderView x:Name="AudioRecorderView"
-				DataContext="{Binding ElementName=me, Path='', Mode=OneWay}"/>
+			<local:AudioRecorderView x:Name="AudioRecorderView"/>
+			<!--DataContext="{x:Bind Path=VM.Folder, Mode=OneWay}"/>-->
 		</Popup>
 
-		<ScrollViewer IsEnabled="{Binding IsOpen}"
+		<ScrollViewer IsEnabled="{x:Bind IsOpen, Mode=OneWay}"
 			VerticalScrollBarVisibility="Auto" VerticalScrollMode="Enabled"
 			HorizontalScrollBarVisibility="Disabled" HorizontalScrollMode="Disabled">
 
@@ -49,7 +49,7 @@
 						MinWidth="{StaticResource LandscapeItemWidth}"
 						MinHeight="{StaticResource LandscapeItemHeight}"
 						MaxLength="{StaticResource MaxFolderNameLength}"
-						Text="{Binding Name, Mode=TwoWay}"
+						Text="{x:Bind VM.Folder.Name, Mode=TwoWay}"
 						Style="{StaticResource LolloTextBoxStyle}">
 						<TextBox.Header>
                             <TextBlock x:Uid="Name"/>
@@ -62,7 +62,7 @@
 						MinHeight="{StaticResource LandscapeItemHeight}"
 						MaxLength="{StaticResource MaxFolderDescrLength}"
 						AcceptsReturn="True"
-						Text="{Binding Descr0, Mode=TwoWay}"						
+						Text="{x:Bind VM.Folder.Descr0, Mode=TwoWay}"
 						Style="{StaticResource LolloTextBoxStyle}">
                         <TextBox.Header>
                             <TextBlock x:Uid="Remarks"/>
@@ -82,14 +82,14 @@
 						Width="{StaticResource LandscapeItemHeight}"
 						Height="{StaticResource LandscapeItemHeight}"						
                         VerticalAlignment="Top"
-						IsChecked="{Binding IsEditingCategories, Mode=TwoWay}"
+						IsChecked="{x:Bind VM.Folder.IsEditingCategories, Mode=TwoWay, Converter={StaticResource BoolNullableBoolConverter}}"
 						Icon="View"
 						x:Uid="EditCategories"/>
                         
                     <ItemsControl Grid.Column="2"
                         VerticalAlignment="Top"
-						Visibility="{Binding IsEditingCategories, Converter={StaticResource BooleanToVisibleConverter}}"
-						ItemsSource="{Binding VM.FolderCategorySelector, ElementName=me}">
+						Visibility="{x:Bind VM.Folder.IsEditingCategories, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
+						ItemsSource="{x:Bind VM.FolderCategorySelector, Mode=OneWay}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
 								<ctl:UniversalWrapPanel Orientation="Horizontal"/>
@@ -111,7 +111,7 @@
 
                 <!-- dynamic fields -->
                 <ItemsControl Grid.Row="4"
-					ItemsSource="{Binding DynamicFields}">
+					ItemsSource="{x:Bind VM.Folder.DynamicFields, Mode=OneWay}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <!--<ItemsWrapGrid Orientation="Horizontal"/>-->
@@ -142,11 +142,6 @@
 											</Grid>
 										</DataTemplate>
 									</ctl:LolloTextBox.ListItemTemplate>
-                                    <!--<TextBox.Header>
-                                        <Border Background="{StaticResource SystemControlBackgroundBaseLowBrush}">
-                                        <TextBlock Text="{Binding FieldDescription.Caption, Mode=OneWay}"/>
-                                        </Border>
-                                    </TextBox.Header>-->
                                 </ctl:LolloTextBox>
                             </Grid>
                         </DataTemplate>
@@ -154,10 +149,9 @@
                 </ItemsControl>
 
                 <!-- Wallets -->
-				<!--VM="{Binding VM, ElementName=me, Mode=OneWay}"-->
-                <local:WalletsView Grid.Row="6"					
-					VM="{Binding VM, ElementName=me, Mode=OneWay}"
-					DataContext="{Binding}"/>
+				<local:WalletsView Grid.Row="6"					
+					VM="{x:Bind VM, Mode=OneWay}"/>
+				<!--DataContext="{x:Bind VM.Folder, Mode=OneWay}"/>-->
             </Grid>
         </ScrollViewer>
     </Grid>
