--- a/UniFiler10/Views/SettingsPage.xaml
+++ b/UniFiler10/Views/SettingsPage.xaml
@@ -75,11 +75,11 @@
 			</DoubleAnimationUsingKeyFrames>
 		</Storyboard>
 	</ctl:OpenableObservablePage.Resources>
-	
+
 	<Grid x:Name="LayoutRoot" 
 		  Background="AntiqueWhite"
-		  d:DataContext="{d:DesignInstance vm:SettingsVM, CreateList=True, IsDesignTimeCreatable=True}"
-		  DataContext="{x:Bind VM, Mode=OneWay}">
+		  d:DataContext="{d:DesignInstance vm:SettingsVM, CreateList=True, IsDesignTimeCreatable=True}">
+		<!--DataContext="{x:Bind VM, Mode=OneWay}">-->
 		<FlyoutBase.AttachedFlyout>
 			<Flyout Placement="Full" x:Name="AboutFlyout">
 				<views:AboutPanel/>
@@ -179,7 +179,7 @@
 			</Button>
 
 			<ToggleButton
-                IsChecked="{Binding MetaBriefcase.IsElevated, Mode=TwoWay, FallbackValue=False}"
+                IsChecked="{x:Bind VM.MetaBriefcase.IsElevated, Mode=TwoWay, FallbackValue=False, Converter={StaticResource BoolNullableBoolConverter}}"
                 Style="{StaticResource ToggleButtonLolloStyle}"
 				Tapped="OnToggleElevated_Tapped">
 
@@ -196,28 +196,28 @@
 							VerticalAlignment="Center"
 							Width="{StaticResource LandscapeItemHeight}"
 							Height="{StaticResource LandscapeItemHeight}"
-                            Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Collapsed}"/>
+                            Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Collapsed}"/>
 					<SymbolIcon 
                             Symbol="Emoji2" 
 							HorizontalAlignment="Center"
 							VerticalAlignment="Center"
 							Width="{StaticResource LandscapeItemHeight}"
 							Height="{StaticResource LandscapeItemHeight}"
-                            Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"/>
+                            Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"/>
 					<TextBlock Grid.Column="2" 
                             x:Uid="GotoElevated"
 							MaxWidth="{StaticResource LandscapeItemWidthMinusPanelPadding}"
                             TextWrapping="Wrap"
                             HorizontalAlignment="Left"
 							VerticalAlignment="Center"
-							Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Collapsed}"/>
+							Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Collapsed}"/>
 					<TextBlock Grid.Column="2"
                             x:Uid="GotoSafe"
 							MaxWidth="{StaticResource LandscapeItemWidthMinusPanelPadding}"
                             TextWrapping="Wrap"
                             HorizontalAlignment="Left"
 							VerticalAlignment="Center"
-							Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"/>
+							Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"/>
 				</Grid>
 			</ToggleButton>
 
@@ -247,7 +247,7 @@
 			<Button
 				Tapped="OnImport_Tapped"
 				Style="{StaticResource ButtonLolloStyle}"
-				Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}">
+				Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}">
 				<Grid>
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="{StaticResource LandscapeItemHeight_ForGrid}"/>
@@ -295,7 +295,7 @@
 		</ctl:UniversalWrapPanel>
 
 		<Border Grid.Row="1"
-			Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"
+			Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"
 			BorderBrush="{StaticResource FlashyForeground}"
 			BorderThickness="{StaticResource Thickness2222}"
 			Padding="{StaticResource PanelPadding8282}">
@@ -307,7 +307,7 @@
 		</Border>
 
 		<Border Grid.Row="1"
-			Visibility="{Binding MetaBriefcase.IsElevated, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Collapsed}"
+			Visibility="{x:Bind VM.MetaBriefcase.IsElevated, Mode=OneWay, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Collapsed}"
 			BorderThickness="{StaticResource Thickness2222}"
 			Padding="{StaticResource PanelPadding8282}">
 			<TextBlock x:Uid="SafeMode"
