--- a/UniFiler10/Views/AboutPanel.xaml
+++ b/UniFiler10/Views/AboutPanel.xaml
@@ -29,14 +29,14 @@
 		</Grid.RowDefinitions>
 
         <TextBlock Grid.Row="0"
-            Text="{Binding ElementName=me, Path=AppName}"
+            Text="{x:Bind AppName, Mode=OneWay}"
             TextWrapping="Wrap" 
             Style="{StaticResource BasicTextStyle}"
             Margin="{StaticResource PanelMargin2}"
             VerticalAlignment="Center"/>
 
         <TextBlock Grid.Row="1"
-            Text="{Binding ElementName=me, Path=AppVersion}"
+            Text="{x:Bind AppVersion, Mode=OneWay}"
             TextWrapping="Wrap" 
             Style="{StaticResource BasicTextStyle}"
             Margin="{StaticResource PanelMargin2}"
@@ -68,21 +68,21 @@
 
             <TextBlock Grid.Row="0"
                 Text="This app is fully licensed"
-                Visibility="{Binding IsTrial, Converter={StaticResource BooleanToCollapsedConverter}}"
+                Visibility="{x:Bind RuntimeData.IsTrial, Converter={StaticResource BooleanToCollapsedConverter}, Mode=OneWay}"
                 TextWrapping="Wrap" 
                 Style="{StaticResource BasicTextStyle}"
                 Margin="{StaticResource PanelMargin2}"
                 VerticalAlignment="Center"/>
             <TextBlock Grid.Row="0"
-                Text="{Binding TrialResidualDays, Converter={StaticResource StringFormatterConverter}, ConverterParameter='You have {0} trial days left'}"
-                Visibility="{Binding IsTrial, Converter={StaticResource BooleanToVisibleConverter}}"
+                Text="{x:Bind RuntimeData.TrialResidualDays, Converter={StaticResource StringFormatterConverter}, ConverterParameter='You have {0} trial days left', Mode=OneWay}"
+                Visibility="{x:Bind RuntimeData.IsTrial, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
                 TextWrapping="Wrap" 
                 Style="{StaticResource BasicTextStyle}"
                 Margin="{StaticResource PanelMargin2}"
                 VerticalAlignment="Center"/>
             <Button Grid.Row="1"
                 Click="OnBuy_Click"
-                Visibility="{Binding IsTrial, Converter={StaticResource BooleanToVisibleConverter}}">
+                Visibility="{x:Bind RuntimeData.IsTrial, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}">
                 <TextBlock HorizontalAlignment="Left"
                     Text="Buy (the app will quit)"
                     TextWrapping="Wrap" 
@@ -146,7 +146,7 @@
 				BorderThickness="0"
 				Margin="{StaticResource PanelMargin2}">
 				<TextBlock Grid.Row="3" TextWrapping="Wrap"
-					Text="{Binding ElementName=me, Path=LogText}"
+					Text="{x:Bind LogText, Mode=OneWay}"
 					MinHeight="400" Unloaded="OnLogText_Unloaded" ScrollViewer.HorizontalScrollBarVisibility="Visible"/>
 			</Border>
 		</Grid>
