--- a/UniFiler10/Views/AudioRecorderView.xaml
+++ b/UniFiler10/Views/AudioRecorderView.xaml
@@ -34,14 +34,6 @@
 				To="180" 
 				Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.Rotation)" 
 				Storyboard.TargetName="viewbox"/>
-			<!--<DoubleAnimation Duration="0:0:0.2" 
-				From="1" To=".8" 
-				Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" 
-				Storyboard.TargetName="viewbox"/>
-			<DoubleAnimation Duration="0:0:0.2" 
-				From="1" To=".8" 
-				Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" 
-				Storyboard.TargetName="viewbox"/>-->
 		</Storyboard>
 	</UserControl.Resources>
 
@@ -87,7 +79,7 @@
 		</StackPanel>
 
 		<Border VerticalAlignment="Bottom">
-			<TextBlock Text="{Binding ElementName=me, Path=LastMessage}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+			<TextBlock Text="{x:Bind LastMessage, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 		</Border>
 	</Grid>
 </ctl:OpenableObservableControl>
