--- a/UniFiler10/Views/FolderView.xaml
+++ b/UniFiler10/Views/FolderView.xaml
@@ -18,12 +18,12 @@
 	<Grid x:Name="LayoutRoot" 
 		Background="#FFDEEADE">
 
-		<!--<Popup IsOpen="{x:Bind VM.IsCameraOverlayOpen, Mode=OneWay, FallbackValue=False}">
+		<!--<Popup IsOpen="{x:Bind VM.IsCameraOverlayOpen, Mode=OneWay, FallbackValue=false}">
 			<local:CameraView x:Name="CameraView"/>
 			--><!--DataContext="{x:Bind Path=VM.Folder, Mode=OneWay}"/>--><!--
 		</Popup>-->
 
-		<Popup IsOpen="{x:Bind VM.IsAudioRecorderOverlayOpen, Mode=OneWay, FallbackValue=False}">
+		<Popup IsOpen="{x:Bind VM.IsAudioRecorderOverlayOpen, Mode=OneWay, FallbackValue=false}">
 			<local:AudioRecorderView x:Name="AudioRecorderView"/>
 			<!--DataContext="{x:Bind Path=VM.Folder, Mode=OneWay}"/>-->
 		</Popup>
@@ -82,7 +82,7 @@
 						Width="{StaticResource LandscapeItemHeight}"
 						Height="{StaticResource LandscapeItemHeight}"						
                         VerticalAlignment="Top"
-						IsChecked="{x:Bind VM.Folder.IsEditingCategories, Mode=TwoWay, Converter={StaticResource BoolNullableBoolConverter}}"
+						IsChecked="{Binding ElementName=me, Path=VM.Folder.IsEditingCategories, Mode=TwoWay}"
 						Icon="View"
 						x:Uid="EditCategories"/>
                         
